--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Juan Rios</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="./images/favicon_io/favicon.ico">
 	</head>
 	<body class="is-preload">
 
@@ -17,9 +18,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="./images/me.jpg" alt="" /></a>
-					<h1><strong>I am Juan Rios Jr.</strong>, a recent Computer Science graduate<br />
-					from the University of Oregon<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1>Hi, I am <strong>Juan Rios Jr.</strong>, a recent Computer Science graduate<br />
+					from the University of Oregon<br />.</h1>
 				</div>
 			</header>
 
