Add link to download resume

--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
 				Information Services, which has allowed me to develop my IT skills and complement my Computer Science
 				degree.
 			</p>
+
 			<ul class="actions">
 				<!--target opens page in new window, rel prevents tabnabbing-->
-				<li><a href="https://www.linkedin.com/in/riosjuanjr/" target="_blank" rel="noopener noreferrer"
-						class="button">Download my resume</a></li>
+				<li><a href="devResume.pdf" download class="button">Download my resume
+						<img src="devResume.pdf" alt="">
+					</a></li>
 			</ul>
 		</section>
 
@@ -80,7 +82,8 @@
 				</article>
 			</div>
 			<ul class="actions">
-				<li><a href="https://github.com/johnriverz" target="_blank" rel="noopener noreferrer" class="button">My GitHub</a></li>
+				<li><a href="https://github.com/johnriverz" target="_blank" rel="noopener noreferrer" class="button">My
+						GitHub</a></li>
 			</ul>
 		</section>
 
@@ -450,12 +453,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<footer id="footer">
 		<div class="inner">
 			<ul class="icons">
-				<li><a href="https://www.linkedin.com/in/riosjuanjr/" target="_blank" rel="noopener noreferrer" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-				<li><a href="https://github.com/johnriverz" target="_blank" rel="noopener noreferrer" class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="juan.jose.rios.jr@gmail.com" target="_blank" rel="noopener noreferrer" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://www.linkedin.com/in/riosjuanjr/" target="_blank" rel="noopener noreferrer"
+						class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+				<li><a href="https://github.com/johnriverz" target="_blank" rel="noopener noreferrer"
+						class="icon brands fa-github"><span class="label">Github</span></a></li>
+				<li><a href="juan.jose.rios.jr@gmail.com" target="_blank" rel="noopener noreferrer"
+						class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; Untitled</li>
+				<li>&copy; thejuanrios</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
