Update mail icon link

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 				<li><a href="https://github.com/johnriverz" target="_blank" rel="noopener noreferrer"
 						class="icon brands fa-github"><span class="label">Github</span></a></li>
-				<li><a href="juan.jose.rios.jr@gmail.com" target="_blank" rel="noopener noreferrer"
+				<li><a href="mailto:juan.jose.rios.jr@gmail.com" target="_blank" rel="noopener noreferrer"
 						class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
