Update Contact section
Still need to make a functional contact form

--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
 
 		<!-- Three -->
 		<section id="three">
-			<h2>Get In Touch</h2>
-			<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu
-				lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+			<h2>Here's how you can get in touch</h2>
+			<p>I check emails and messages every day.</p>
 			<div class="row">
 				<div class="col-8 col-12-small">
 					<form method="post" action="#">
@@ -112,17 +111,17 @@
 					<ul class="labeled-icons">
 						<li>
 							<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-							1234 Somewhere Rd.<br />
-							Nashville, TN 00000<br />
+							<!-- 1234 Somewhere Rd.<br /> -->
+							Eugene, OR 97403<br />
 							United States
 						</li>
 						<li>
 							<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-							000-000-0000
+							541-951-0622
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="#">hello@untitled.tld</a>
+							<a href="mailto:juan.jose.rios.jr@gmail.com" target="_blank" rel="noopener noreferrer">juan.jose.rios.jr@gmail.com</a>
 						</li>
 					</ul>
 				</div>
@@ -461,7 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
-				<li>&copy; thejuanrios</li>
+				<li>&copy;thejuanrios</li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
