Add Things I Can Do section

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		</section>
 
 		<!-- Two -->
-		<section id="two">
-			<h2>Here are some of my projects</h2>
+		<!-- <section id="two">
+			<h2>Things I Can Do</h2>
 			<div class="row">
 				<article class="col-6 col-12-xsmall work-item">
 					<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
@@ -85,11 +85,34 @@
 				<li><a href="https://github.com/johnriverz" target="_blank" rel="noopener noreferrer" class="button">My
 						GitHub</a></li>
 			</ul>
+		</section> -->
+
+		<!-- Two -->
+		<section id="two">
+			<div class="container">
+				<h3>Things I Can Do</h3>
+				<p>And don't forget to check out my
+					<a href="https://github.com/johnriverz" target="_blank" rel="noopener noreferrer"
+						class="button small">
+						GitHub
+					</a>
+					to see some of these skills in action.
+				</p>
+				<ul class="feature-icons">
+					<li class="icon solid fa-code"> Write in C, C#, Python, JavaScript, and HTML/CSS</li>
+					<li class="icon solid fa-cubes"> System design</li>
+					<li class="icon solid fa-book"> Read and write documentation</li>
+					<li class="icon solid fa-coffee"> Drink coffee</li>
+					<li class="icon solid fa-bolt"> Take the intitative</li>
+					<li class="icon solid fa-users"> Collabarate with users and peers</li>
+				</ul>
+			</div>
 		</section>
+
 
 		<!-- Three -->
 		<section id="three">
-			<h2>Here's how you can get in touch</h2>
+			<h2>Here's How You Can Get In Touch</h2>
 			<p>I check emails and messages every day.</p>
 			<div class="row">
 				<div class="col-8 col-12-small">
@@ -121,7 +144,8 @@
 						</li>
 						<li>
 							<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-							<a href="mailto:juan.jose.rios.jr@gmail.com" target="_blank" rel="noopener noreferrer">juan.jose.rios.jr@gmail.com</a>
+							<a href="mailto:juan.jose.rios.jr@gmail.com" target="_blank"
+								rel="noopener noreferrer">juan.jose.rios.jr@gmail.com</a>
 						</li>
 					</ul>
 				</div>
@@ -443,8 +467,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 						</section>
 
-					</section>
-				-->
+					</section> -->
+
 
 	</div>
 
